deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciandk3s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ciandk3s
  template:
    metadata:
      labels:
        app: ciandk3s
    spec:
      containers:
        - name: ciandk3s
          image: aksaz01devvvd01registry.azurecr.io/jungminii/ciandk3s:20241023151006
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
