service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ciandk3s
spec:
  type: NodePort
  selector:
    app: ciandk3s
  ports:
    - port: 8080
